--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,225 @@
-.App {
-  text-align: center;
+.homePageWrapper {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.formWrapper {
+  background: #282a36;
+  padding: 20px;
+  border-radius: 10px;
+  width: 400px;
+  max-width: 90%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+footer {
+  position: fixed;
+  bottom: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+footer a {
+  color: #4aee88;
+  transition: all 0.3s ease-in-out;
+}
+
+.inputGroup {
+  display: flex;
+  flex-direction: column;
+}
+
+.mainLabel {
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+
+.homePageLogo {
+  margin-bottom: 30px;
+  height: 80px;
+}
+
+.inputBox {
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  margin-bottom: 14px;
+  background: #eee;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.btn {
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  font-weight: bold;
+}
+
+.joinBtn,
+.leaveBtn {
+  background: #4aee88;
+  width: 100px;
+  margin-left: auto;
+}
+
+.joinBtn:hover,
+.leaveBtn:hover {
+  background: #2b824c;
+}
+
+.createInfo {
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.createNewBtn {
+  color: #4aee88;
+  text-decoration: none;
+  border-bottom: 1px solid #4aee88;
+  transition: all 0.3s ease-in-out;
+}
+
+.createNewBtn:hover,
+footer a:hover {
+  color: #368654;
+  border-color: #368654;
+}
+
+.mainWrap {
+  display: grid;
+  grid-template-columns: 230px 1fr;
+  height: 100vh;
+}
+
+.aside {
+  background: #1c1e29;
+  padding: 16px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+
+.asideInner {
+  flex: 1;
+}
+
+.logo {
+  border-bottom: 1px solid #424242;
+  padding-bottom: 10px;
+}
+
+.logoImage {
+  height: 60px;
+}
+
+.clientsList {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.client {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.username {
+  margin-top: 10px;
+  overflow: hidden;
+  max-width: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.leaveBtn {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.cm-editor {
+  min-height: 100vh;
+  font-size: 20px;
+  line-height: 1.6;
+  padding-top: 20px;
+}
+
+.copyBtn {
+  background: #fff;
+  width: 100px;
+  color: black;
+  width: 100%;
+  /* margin-left: auto; */
+}
+
+.copyBtn:hover {
+  background: #424242;
+  color: #fff;
+}
+/* 
+.selectMenuBtn {
+  min-width: 198px;
+}
+
+.menuItems {
+  background-color: "transparent";
+  border: "none";
+  width: "100%";
+  text-align: "left";
+  padding: "12px 16px";
+  text-decoration: "none";
+  display: "block";
+  cursor: "pointer";
+} */
+/* 
+.menuItems:hover {
+  background-color: #2b824c;
+} */
+
+.languageBtn {
+  padding-bottom: 10px;
+}
+
+.editor {
+  position: relative;
+  display: flex;
+  width: 100vw;
+  /* height: 100vh; */
+}
+
+.languageSelectorDiv {
+  /* position: relative; */
+  /* margin: auto; */
+  padding-top: 26px;
+  max-width: 100px;
+}
+
+.selectLanguageDiv {
+  position: "relative";
+}
+
+.dropDownDiv {
+  position: "absolute";
+  /* top: "100%"; */
+  left: "0";
+  background-color: "#f9f9f9";
+  min-width: "160px";
+  box-shadow: "0px 8px 16px 0px rgba(0,0,0,0.2)";
+  z-index: "1";
+}
+
+.menuDiv {
+  position: "absolute";
+  top: "-600%";
+  left: "0";
+  background-color: "#f9f9f9";
+  min-width: "160px";
+  box-shadow: "0px 8px 16px 0px rgba(0,0,0,0.2)";
+  z-index: "1";
 }
